# Sefermark3000

./: .env.example  .gitignore  Procfile  README.md  com.sefermark.twitter-notion-sync.plist  pyproject.toml  requirements.txt
scripts/: setup_macos_service.sh  uninstall_macos_service.sh
src/twitter_notion_sync/: __init__.py  config.py  notion_client.py  oauth_setup.py  sms_webhook.py  state_manager.py  sync_service.py  twitter_client.py
tests/: __init__.py  conftest.py  test_config.py  test_integration.py  test_notion_client.py  test_sms_webhook.py  test_state_manager.py  test_twitter_client.py
